shorten link url

--- a/spec/fixtures/birthdays.yml
+++ b/spec/fixtures/birthdays.yml
@@ -4,6 +4,7 @@ one:
   name_en: Hiromi Uehara
   name_ja: 上原ひろみ
   introduction: 世界を代表するジャズ・ピアニストである
+  link: "http://ueharahiromi.com/"
 
 two:
   birthday: 99990110
