--- a/dotcloud.yml
+++ b/dotcloud.yml
@@ -1,7 +1,6 @@
 www:
     type: ruby
-    approot: app
-    postinstall: ../script/postinstall.sh
+    postinstall: script/postinstall.sh
 
 db:
     type: mysql
